[project]
name = "py-sudoku-maker"
version = "1.0.0"
requires-python = ">=3.7"
authors = [
  {name = "Timothy Solnyshkin", email = "timothy.solnyshkin@gmail.com"},
]
description = "A Python package that creates a completed Sudoku grid"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/ParallelVoid/py-sudoku-maker/"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["py_sudoku_maker"]

